# manos

./: .gitignore  Makefile.obsolete  build.gradle  configure.ac
data/: manos.pc.in
examples/Shorty/: .gitignore
gradle/wrapper/: gradle-wrapper.properties
scripts/: manos.in
src/Manos/: Makefile.am  Makefile.include  Manos.csproj
src/Manos.IO/: Makefile.am  Manos.IO.csproj
src/Manos.IO/Assembly/: AssemblyInfo.cs
src/Manos.IO/Manos.IO/: Context.cs  FragmentStream.cs
src/Manos.IO/Manos.IO.Libev/: EventedStream.cs  TcpSocket.cs
src/Manos.IO/Manos.IO.Managed/: Context.cs  TcpSocket.cs
src/Manos.Tests/: Manos.Tests.csproj
src/Manos/Assembly/: AssemblyInfo.cs
src/Manos/Manos/: AppHost.cs
src/Manos/Manos.Http/: HttpEntity.cs  HttpMultiPartFormDataHandler.cs  HttpParser.cs  HttpRequest.cs  HttpStream.cs  HttpTransaction.cs  UploadedFile.cs
src/libev/: config.h.in
src/manostool/: AssemblyInfo.cs  DocsCommand.cs  Makefile.am  ServerCommand.cs  manostool.csproj
